# Egytronic

./: README.md  demo.py  egytronic.json  egytronic_company.html  pyproject.toml  setup.py
.github/workflows/: build.yml  npm.yml
egytronic/: __init__.py
egytronic/agent/: agent.py
egytronic/api/: server.py
egytronic/automation/: automation.py
egytronic/cli/: cli.py  cli_new.py
egytronic/config/: config.py
egytronic/gui/: gui.py
egytronic/integrations/: openclaw.py
egytronic/llm/: __init__.py  base.py  cloudflare.py  gemini.py  ollama.py  openai.py  providers.py
egytronic/skills/: skill.py
egytronic/tools/: __init__.py  api.py  base.py  browser.py  filesystem.py  github.py  mcp.py  playwright.py  terminal.py  whatsapp.py
egytronic/vm/: vm_system.py
examples/: examples.py
tests/: test_egytronic.py  test_providers.py
