[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egytronic"
version = "1.0.0"
description = "Universal Agent Development Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Egytronic", email = "dev@egytronic.com"}
]
keywords = ["agent", "ai", "llm", "autonomous", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "aiohttp>=3.8.0",
    "click>=8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
all = [
    "playwright>=1.40",
]

[project.scripts]
egy = "egytronic.cli.main:main"

[project.urls]
Homepage = "https://egytronic.com"
Repository = "https://github.com/egytronic/egytronic"